Milestone: Revenue and Quantity KPIs implementation - Time view alignment fixed

--- a/src/index.css
+++ b/src/index.css
@@ -832,8 +832,7 @@ body {
 }
 
 .cell.selected {
-  outline: 2px solid black;
-  outline-offset: -2px;
+  box-shadow: inset 0 0 0 2px black !important;
   z-index: 10;
   position: relative;
 }
